Use more meaningful variable names in release workflow
A GitHub Actions workflow is used to automatically generate production builds of the project.

A separate build is generated for each of the target host types. This is done using a job matrix, which creates a
parallel run of the workflow job for each target. The matrix defines variables that provide the data that is specific to
each job.

The variable names used previously did not clearly communicate their nature:

Previously, the matrix variable for the task name was named "os". This did not clearly communicate the nature of the
variable, making it difficult for anyone not intimately familiar with the workings of the workflow to understand its
code.

--- a/.github/workflows/release-go-crosscompile-task.yml
+++ b/.github/workflows/release-go-crosscompile-task.yml
@@ -23,7 +23,7 @@ jobs:
 
     strategy:
       matrix:
-        os:
+        task:
           - Windows_32bit
           - Windows_64bit
           - Linux_32bit
@@ -42,7 +42,7 @@ jobs:
 
       - name: Create changelog
         # Avoid creating the same changelog for each os
-        if: matrix.os == 'Windows_32bit'
+        if: matrix.task == 'Windows_32bit'
         uses: arduino/create-changelog@v1
         with:
           tag-regex: '^[0-9]+\.[0-9]+\.[0-9]+.*$'
@@ -62,7 +62,7 @@ jobs:
           version: 3.x
 
       - name: Build
-        run: task dist:${{ matrix.os }}
+        run: task dist:${{ matrix.task }}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v3
